--- a/src/js/components/stylesheets/_site-header.scss
+++ b/src/js/components/stylesheets/_site-header.scss
@@ -43,6 +43,7 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
+  height: 100%;
 }
 
 .btn-menu {
